--- a/gitea/defaults.yaml
+++ b/gitea/defaults.yaml
@@ -52,6 +52,9 @@ gitea:
     allowed_types: image/jpeg|image/png
     max_size: 8
     max_files: 5
+  cron:
+    enabled: true
+    schedule: 24h
   log:
     mode: file
     level: Info
