--- a/pillar.example
+++ b/pillar.example
@@ -44,6 +44,9 @@ gitea:
     allowed_types: image/jpeg|image/png|application/x-tar|application/zip
     max_size: 8
     max_files: 5
+  cron:
+    enabled: true
+    schedule: 12h
   security:
     install_lock: true # This should be False **ONLY** during the first install
     remember_password_days: 30
